# Template

./: README.md  autofix_report_enriched.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/codex/: AGENT_INSTRUCTIONS.md
.github/scripts/: decode_raw_input.py
.github/templates/: keepalive-instruction.md
.github/workflows/: agents-63-issue-intake.yml  agents-70-orchestrator.yml  agents-pr-meta.yml  agents-verifier.yml  autofix-versions.env  autofix.yml  ci.yml  maint-sync-workflows.yml  pr-00-gate.yml
docs/: CI_SYSTEM_GUIDE.md  SETUP_CHECKLIST.md
scripts/: sync_dev_dependencies.py  sync_test_dependencies.py
src/my_project/: __init__.py
tools/: resolve_mypy_pin.py
